--- a/himan/pom.xml
+++ b/himan/pom.xml
@@ -96,13 +96,29 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>3.1.0.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>3.1.0.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
+		<!-- security -->
+		<dependency>  
+            <groupId>org.springframework.security</groupId>  
+            <artifactId>spring-security-core</artifactId>  
+            <version>${spring.version}</version>  
+        </dependency>  
+        <dependency>  
+            <groupId>org.springframework.security</groupId>  
+            <artifactId>spring-security-web</artifactId>  
+            <version>${spring.version}</version>  
+        </dependency>  
+        <dependency>  
+            <groupId>org.springframework.security</groupId>  
+            <artifactId>spring-security-config</artifactId>  
+            <version>${spring.version}</version>  
+        </dependency>  
 		<!-- Mybatis -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
